kubernetes.yaml
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: www
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: aiarena.superskill.me
      http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: aiarena-ui
               port:
                 number: 80
         - path: /api
           pathType: Prefix
           backend:
             service:
               name: aiarena-api
               port:
                 number: 3000
  tls:
    - hosts:
        - aiarena.superskill.me
      secretName: ingress-www

---

kind: Service
apiVersion: v1
metadata:
  name: aiarena-api
spec:
  selector:
    module: aiarena-api
  ports:
    - port: 3000

---

kind: Service
apiVersion: v1
metadata:
  name: aiarena-ui
spec:
  selector:
    module: aiarena-ui
  ports:
    - port: 80

---

kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  selector:
    module: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: aiarena-api
  labels:
    module: aiarena-api
spec:
  selector:
    matchLabels:
      module: aiarena-api
  template:
    metadata:
      labels:
        module: aiarena-api
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: storage
      containers:
        - name: aiarena-api
          image: docker.io/stephanzlatarev/aiarena-api
          ports:
            - containerPort: 3000

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: aiarena-ui
  labels:
    module: aiarena-ui
spec:
  selector:
    matchLabels:
      module: aiarena-ui
  template:
    metadata:
      labels:
        module: aiarena-ui
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: storage
      containers:
        - name: aiarena-ui
          image: docker.io/stephanzlatarev/aiarena-ui
          ports:
            - containerPort: 3000

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongo
  labels:
    module: mongo
spec:
  replicas: 1
  serviceName: mongo
  selector:
    matchLabels:
      module: mongo
  template:
    metadata:
      labels:
        module: mongo
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: storage
      containers:
        - name: mongo
          image: mongo:7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo
              mountPath: /data/db
      volumes:
        - name: mongo
          hostPath:
            path: /var/lib/aiarena/mongo
            type: Directory

---
